--- a/style/style.css
+++ b/style/style.css
@@ -60,8 +60,14 @@ main{
 .nav-main{
     width: 100%;
     color:var(--lightgrey) ;
-    margin-top: 8em;
+    margin-top: 5em;
+    padding: 5em;
    
+}
+.dflex-nav{
+    display: flex;
+    justify-content: center;
+
 }
 ul{
     list-style-type: none;
@@ -70,30 +76,75 @@ ul{
 a{
     text-decoration: none;
     color:var(--lightgrey) ;
-    padding: 2em;
+    padding: 1em;
 }
+
+.inner-content ul li a .active::after{
+    content: "aaa";
+    display: block;
+    width: 50%;
+    height: 2px;
+    background-color: var(--green);
+    margin: 5px auto;
+}
+
+/* card-songs */
+
+
 .content-songs{
    width: 100%;
+   padding-bottom: 4em;
     
 }
 .box-songs{
     text-align: center;
     width: calc( 100%/ 6);
     padding: 1em;
+    cursor: pointer;
     position: relative;
   
 }
-
-
+.box-songs img{
+    width: 100%;
+}
 h3{
     color: var(--white);
 }
 .box-songs p{
     color: var(--lightgrey);
 }
-.box-songs img{
-    width: 100%;
+/* immagini rotonde */
+
+.radius{
+    border-radius: 50%;
+    object-fit: cover;
 }
+/* --------PROVA HOWER------------------------------------ */
+.cover-image{
+    position: relative;
+}
+
+.cover-overlay{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(14, 14, 15, 0.5);
+    font-size: 2.5;
+    display: none;
+}
+
+.box-songs:hover .cover-overlay{
+    display: block;
+}
+
+
+
+
+/* ----------------------- */
+
+
 
 /* .material-symbols-outlined{
     position: absolute;
