--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,10 @@ body{
 .dflex{
     display: flex;
 }
+.align-center{
+    align-items: center;
+}
+
 .dflex-colum{
     display: flex;
     flex-direction: column;
@@ -131,54 +135,46 @@ h3{
     left: 0;
     right: 0;
     background-color: rgba(14, 14, 15, 0.5);
-    font-size: 2.5;
     display: none;
+    font-size: 1,5;
 }
 
 .box-songs:hover .cover-overlay{
-    display: block;
+    display: flex;
 }
-
-
-
-
 /* ----------------------- */
-
-
-
-/* .material-symbols-outlined{
-    position: absolute;
-    top:6%;
-    left:2%;
-    color: white;
-    font-size: ;
-    background-color: rgba(14, 14, 15, 0.5);
-    width: 100%;
-    height: 90%;
-    padding-top: 0.5em;
-   
-} */
-/* hover da fare */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* NAV BAR LATERALE */
 nav{
     width: 230px;
     height: 100%;
     background-color: var(--black);
 }
+
+.big-logo{
+    padding: 20px;
+}
+
+.home{
+    width: 20%;
+    padding-left: 20px;
+}
+.home h2{
+    font-size: 1em;
+}
+
+.square{
+    width: 50px;
+    height: 50px;
+    margin-left: 20px;
+    background-color: var(--lightgrey);
+}
+
+nav h3{
+    color: var(--lightgrey);
+    padding-left: 5px;
+    font-size: 1em;
+}
+
 
 /* PARTE DI SOPRA SFOCATA */
 aside{
