--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,7 @@ body{
     --darkblue:rgb(20, 25, 34);
     --green:rgb(173, 255, 47);
     --lightgrey:rgb(117, 116, 116);
+    --darkgrey:rgb(40, 40, 40);
 }
 .debug{
     border: 1px solid red;
@@ -31,6 +32,9 @@ body{
 }
 .align-center{
     align-items: center;
+}
+.justify-space-betwe{
+    justify-content: space-between;
 }
 
 .dflex-colum{
@@ -145,9 +149,11 @@ h3{
 /* ----------------------- */
 /* NAV BAR LATERALE */
 nav{
+   
     width: 230px;
     height: 100%;
     background-color: var(--black);
+    position: relative;
 }
 
 .big-logo{
@@ -175,6 +181,54 @@ nav h3{
     font-size: 1em;
 }
 
+.lista-nav{
+    padding-top: 1.3em;
+}
+.lista-nav li{
+    padding-bottom: 1.3em;
+}
+.lista-nav ul li a {
+    font-weight: 800;
+    
+}
+.nav-bot{
+    position: absolute;
+    bottom: 0;
+    z-index: 2200;
+    width: 100%;
+    height: 0px;
+    padding-bottom: 7em;
+}
+
+.download{
+    width: 25px;
+    height: 25px;
+    color: white;
+}
+
+.download1{
+    width: 30px;
+    height: 30px;
+    color: white;
+    border-radius: 50%;
+}
+
+
+.nav-bot2{
+    position: absolute;
+    bottom: 0;
+    z-index: 2500;
+    width: 100%;
+    height: 30px;
+    padding-bottom: 3em;
+   
+}
+
+.nav-bot2 h2{
+    font-size: 1em;
+}
+
+
 
 /* PARTE DI SOPRA SFOCATA */
 aside{
@@ -190,8 +244,32 @@ aside{
 .playbar{
     width: 100%;
     height: 95px;
-    background-color: var(--grey);
+    background-color: var(--darkgrey);
     position: fixed;
     bottom: 0;
     z-index: 2000;
+}
+.cont-play-1{
+    width: 230px;
+    margin-top: 1em;
+
+}
+.song-player{
+    width: 100%;
+}
+.song{
+    width: 60px;
+    height: 60px;
+}
+.song h2{
+    font-size: 17px;
+    padding-left: 10px;
+    padding-bottom: 0;
+}
+.song p{
+    padding-left: 10px;
+    font-size: 12px;
+    font-weight: 800;
+
+
 }
