--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,12 @@ body{
 .justify-space-betwe{
     justify-content: space-between;
 }
+.justify-center{
+    justify-content: center;
+}
+.justify-end{
+    justify-content: end;
+}
 
 .dflex-colum{
     display: flex;
@@ -197,7 +203,7 @@ nav h3{
     z-index: 2200;
     width: 100%;
     height: 0px;
-    padding-bottom: 7em;
+    padding-bottom: 6em;
 }
 
 .download{
@@ -250,16 +256,39 @@ aside{
     z-index: 2000;
 }
 .cont-play-1{
-    width: 230px;
+    /* width: 230px; */
     margin-top: 1em;
+    width:calc(100%/ 3);
 
 }
+.cont-play-2{
+  padding-top: 0.5em;
+  /* width: 800px; */
+  width:calc(100%/ 2);  
+}
+.cont-play-3{
+    margin-top: 1em;
+    width: calc(60% / 3);
+    padding-right: 10px;
+
+}
+
 .song-player{
     width: 100%;
 }
 .song{
     width: 60px;
     height: 60px;
+}
+
+.player-n2{
+    margin-left:20px ;
+    padding-right: 20px;
+}
+
+.player-n{
+    margin-left:20px ;
+    margin-right: 20px;
 }
 .song h2{
     font-size: 17px;
@@ -271,5 +300,41 @@ aside{
     font-size: 12px;
     font-weight: 800;
 
+}
+
+.size-time-song{
+    height: 8px;
+    width: 80%;
+    border-radius: 5px;
+    background-color: var(--lightgrey);
+}
+
+.time-sog h3{
+    font-size: 12px;
+    color: var(--lightgrey);
+}
+
+.volume-bar{
+    width: 40%;
+    height: 5px;
+    background-color: var(--lightgrey);
+}
+
+
+/* simboli */
+.material-symbols-outlined{
+    padding: 5px;
+
+}
+
+.simbolo{
+    color: var(--lightgrey);
+    margin-top: 15px;
+    margin-left: 12px;
+    padding-right: 10px;
+}
+.simbolo2{
+    color: var(--white);
+    text-align: center;
 
 }
