--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,6 @@ body{
 .debug{
     border: 1px solid red;
 }
-
 .wrapper{
     max-width: 1200px;
     height: 100vh;
@@ -76,35 +75,28 @@ main{
     color:var(--lightgrey) ;
     margin-top: 5em;
     padding: 5em;
-   
 }
 .dflex-nav{
     display: flex;
     justify-content: center;
-
 }
 ul{
     list-style-type: none;
-}
-    
+}  
 a{
     text-decoration: none;
     color:var(--lightgrey) ;
     padding: 1em;
 }
-
-.inner-content ul li a .active::after{
+/* .inner-content ul li a .active::after{
     content: "aaa";
     display: block;
     width: 50%;
     height: 2px;
     background-color: var(--green);
     margin: 5px auto;
-}
-
+} */
 /* card-songs */
-
-
 .content-songs{
    width: 100%;
    padding-bottom: 4em;
@@ -112,11 +104,10 @@ a{
 }
 .box-songs{
     text-align: center;
-    width: calc( 100%/ 6);
+    width: calc( 100%/ 6 );
     padding: 1em;
     cursor: pointer;
     position: relative;
-  
 }
 .box-songs img{
     width: 100%;
@@ -137,7 +128,6 @@ h3{
 .cover-image{
     position: relative;
 }
-
 .cover-overlay{
     position: absolute;
     top: 0;
@@ -161,11 +151,9 @@ nav{
     background-color: var(--black);
     position: relative;
 }
-
 .big-logo{
     padding: 20px;
 }
-
 .home{
     width: 20%;
     padding-left: 20px;
@@ -173,20 +161,17 @@ nav{
 .home h2{
     font-size: 1em;
 }
-
 .square{
     width: 50px;
     height: 50px;
     margin-left: 20px;
     background-color: var(--lightgrey);
 }
-
 nav h3{
     color: var(--lightgrey);
     padding-left: 5px;
     font-size: 1em;
 }
-
 .lista-nav{
     padding-top: 1.3em;
 }
@@ -205,21 +190,17 @@ nav h3{
     height: 0px;
     padding-bottom: 6em;
 }
-
 .download{
     width: 25px;
     height: 25px;
     color: white;
 }
-
 .download1{
     width: 30px;
     height: 30px;
     color: white;
     border-radius: 50%;
 }
-
-
 .nav-bot2{
     position: absolute;
     bottom: 0;
@@ -229,12 +210,9 @@ nav h3{
     padding-bottom: 3em;
    
 }
-
 .nav-bot2 h2{
     font-size: 1em;
 }
-
-
 
 /* PARTE DI SOPRA SFOCATA */
 aside{
@@ -259,7 +237,6 @@ aside{
     /* width: 230px; */
     margin-top: 1em;
     width:calc(100%/ 3);
-
 }
 .cont-play-2{
   padding-top: 0.5em;
@@ -270,9 +247,7 @@ aside{
     margin-top: 1em;
     width: calc(60% / 3);
     padding-right: 10px;
-
 }
-
 .song-player{
     width: 100%;
 }
@@ -280,12 +255,10 @@ aside{
     width: 60px;
     height: 60px;
 }
-
 .player-n2{
     margin-left:20px ;
     padding-right: 20px;
 }
-
 .player-n{
     margin-left:20px ;
     margin-right: 20px;
@@ -299,34 +272,27 @@ aside{
     padding-left: 10px;
     font-size: 12px;
     font-weight: 800;
-
 }
-
 .size-time-song{
     height: 8px;
     width: 80%;
     border-radius: 5px;
     background-color: var(--lightgrey);
 }
-
 .time-sog h3{
     font-size: 12px;
     color: var(--lightgrey);
 }
-
 .volume-bar{
     width: 40%;
     height: 5px;
     background-color: var(--lightgrey);
 }
-
-
 /* simboli */
 .material-symbols-outlined{
     padding: 5px;
 
 }
-
 .simbolo{
     color: var(--lightgrey);
     margin-top: 15px;
@@ -336,5 +302,67 @@ aside{
 .simbolo2{
     color: var(--white);
     text-align: center;
+}
 
+/* --MEDIA QUERY-- */
+@media screen and (max-width:1000px) {
+    .main-content{
+        width: 1000px;
+    }
+    .dflex-nav{
+        
+        justify-content:baseline;
+    }
+    .dflex-nav{
+        flex-wrap: wrap;
+       
+    }
+    
+    .dflex-nav a{
+            padding: 2em;
+    }
+
+   .volume-bar{
+        width: 20%;
+   }
+
+   
+}
+
+/* Tablet */
+@media screen and (max-width:768px) {
+    .main-content{
+        width: 768px;
+    }
+    .dflex-nav a{
+        padding: 2em;
+    }
+    .nav-main{
+        width: 100%;
+        margin-top: 5em;
+        padding: 2em;
+    }
+    .dflex-nav{
+    justify-content:none;
+    }
+
+    .box-songs{ 
+        width: calc( 100%/ 4);
+        padding: 1em;
+    }
+
+
+}
+
+/* PHONE */
+
+@media screen and (max-width:425px) {
+    .main-content{
+        width: 425px;
+    }
+    .nav-main{
+        width: 100%;
+        margin-top: 12em;
+        padding: 2em;
+    }
 }
